k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ecom-web
  name: ecom-web
spec:
  selector:
    matchLabels:
      app: ecom-web
  template:
    metadata:
      labels:
        app: ecom-web
    spec:
      containers:
      - image: warmmike/ecom-web:latest
        imagePullPolicy: Always
        name: ecom-web
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          requests:
            cpu: 400m
        readinessProbe:
          httpGet:
            path: /
            port: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
