k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecom-web-service
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: ecom-web
  type: ClusterIP
